# termx

./: .gitattributes  .gitignore  .release-it.json  .release-it.termxd.json  CHANGELOG.md  LICENSE  PRIVACY.md  PROJECT_KNOWLEDGE.md  README.md  package-lock.json  package.json
.github/workflows/: android-debug.yml  android-release.yml  termxd-release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/core/common/: build.gradle.kts
android/core/data/: build.gradle.kts
android/core/domain/: build.gradle.kts
android/feature/keys/: build.gradle.kts
android/feature/onboarding/: build.gradle.kts
android/feature/ptt/: build.gradle.kts
android/feature/servers/: build.gradle.kts
android/feature/settings/: build.gradle.kts
android/feature/terminal/: build.gradle.kts
android/feature/updater/: build.gradle.kts
android/gradle/: libs.versions.toml
android/libs/companion/: build.gradle.kts
android/libs/mosh-transport/: README.md  (+2 more)
android/libs/ssh-native/src/main/cpp/: CMakeLists.txt  pty_fork_exec.c
docs/: FDROID.md  PRE_RELEASE_CHECKLIST.md  ROADMAP.md
metadata/: dev.kuch.termx.yml
termxd/: .goreleaser.yaml  CHANGELOG.md  Makefile  README.md  go.mod  main.go  package.json
termxd/cmd/: hidden.go  hook_posttooluse.go  hook_posttooluse_test.go  hook_pretooluse.go  hook_pretooluse_contract_test.go  hook_pretooluse_test.go  hooks.go  hooks_test.go  install.go  install_preflight_test.go  install_systemd_test.go  root.go  uninstall.go  watch_herdr.go  watch_herdr_test.go
termxd/scripts/: release.sh
(+359 files in other folders)
